--- a/app/views/embed/pages/_hole_information.html.erb
+++ b/app/views/embed/pages/_hole_information.html.erb
@@ -34,7 +34,7 @@
       </div>
       <div id="11">
         <ul id="map">
-          <li><%=image_tag @hole.map.url %></li>
+          <li><%=image_tag @hole.map.url.gsub("http", "https") %></li>
         </ul>
       </div>
       <div id="22">
@@ -42,7 +42,7 @@
         <div class="slider-bg-color-right"> </div>
         <ul id="slider-1" class="bxslider">
           <% @hole.hole_images.order(:rank).each do | holeimage | %>
-            <li><%=image_tag holeimage.image.url %></li>
+            <li><%=image_tag holeimage.image.url.gsub("http", "https") %></li>
           <% end%>
         </ul>
       </div>
@@ -54,7 +54,7 @@
       </div>
       <div id="33">
         <ul id="map">
-          <li><%=image_tag @hole.map.url %></li>
+          <li><%=image_tag @hole.map.url.gsub("http", "https") %></li>
         </ul>
       </div>
       <div id="44">
@@ -62,7 +62,7 @@
         <div class="slider-bg-color-right hole-info-right"> </div>
         <ul id="slider-2" class="bxslider">
           <% @hole.hole_images.order(:rank).each do | holeimage | %>
-            <li><%=image_tag holeimage.image.url %></li>
+            <li><%=image_tag holeimage.image.url.gsub("http", "https") %></li>
           <% end%>
         </ul>
       </div>
