--- a/app/views/admin/score_cards/_scorecard_modal.html.erb
+++ b/app/views/admin/score_cards/_scorecard_modal.html.erb
@@ -8,7 +8,7 @@
     <% if @course.scorecard_images.exists? %>
         <% @course.scorecard_images.each do |image| %>
           <li class="modal-content">
-              <%=image_tag image.photo.url.gsub("http", "https"), class: "modal_scorecard_image" %>
+              <%=image_tag image.photo.url.gsub('s3-us-west-2.amazonaws.com/fore92', 'd1s5na5d5z3eyp.cloudfront.net').gsub("http", "https"), class: "modal_scorecard_image" %>
           </li>
       <% end %>
     <% else %>
